# AI-Learning

./: .gitignore  LICENSE  README.md
LangGraph/: README.md  config.env.example  config.py  pyproject.toml  utils.py
LangGraph/data/: memory.db
LangGraph/examples/: 01_basic_concepts.py  02_graph_api.py  03_streaming.py  04_memory_system.py  05_model_integration.py  06_tool_integration.py  07_human_in_the_loop.py  08_mcp_integration.py  09_react_agent.py  README.md  run_tutorial.py
chat/: Makefile  README.md  config.yaml  go.mod  go.sum  main.go
chat/pkg/chat/: engine.go
chat/pkg/config/: config.go
chat/pkg/mcp/: client.go
docs/: 企业级 Agent 开发实战(二) MCP 原理深度解析及项目实战.md  企业级Agent开发实战(一)LangGraph快速入门.md
mcp/: README.md
mcp/go-sdk/: Makefile  config.yaml  go.mod  go.sum
mcp/go-sdk/cmd/client/: main.go
mcp/go-sdk/cmd/server/: main.go
mcp/go-sdk/pkg/config/: config.go
mcp/go-sdk/pkg/ssh/: client.go
mcp/go_jsonrpc/: Makefile  config.yaml  go.mod  go.sum
mcp/go_jsonrpc/cmd/client/: main.go
mcp/go_jsonrpc/cmd/server/: main.go
mcp/go_jsonrpc/cmd/sse-client/: main.go
mcp/go_jsonrpc/cmd/sse-server/: main.go
mcp/go_jsonrpc/pkg/client/: client.go  sse_client.go
mcp/go_jsonrpc/pkg/config/: config.go
mcp/go_jsonrpc/pkg/server/: server.go  sse_server.go
mcp/go_jsonrpc/pkg/ssh/: client.go
mcp/go_jsonrpc/pkg/types/: mcp.go
